--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               </div>
               
 			<p>
-				<img src="img/Modern.png" alt="Korg Grandstage 88, Casio Privia Pro PX-560, and Yamaha C3" />
+				<img src="img/wp.png" alt="Korg Grandstage 88, Casio Privia Pro PX-560, and Yamaha C3" />
 			</p>
 			<p>
 				We specialize in the sale, distribution, and repair of classic Korg, Casio, and Yamaha in particular of the Grand Piano including Electric Keyboard.
